<resources>
    <string name="app_name">AdaptaBTP</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">AdaptaBTP</string>
    <string name="nav_header_subtitle">L\'assistant qui s\'adapte à vos besoins</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="test">Test</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="form_actual_lux">Taux de luminosité :</string>
    <string name="logo">logo</string>
    <string name="lux_unit">lux</string>
    <string name="actual_theme_form">Le thème est :</string>
    <string name="informations_env">Informations sur l\'environnement</string>
    <string name="light_sensor_handler">Activer le capteur de luminosité</string>
</resources>
